# index-tts

./: .gitignore  README.md  pyproject.toml  webui.py
checkpoints/: config.yaml
export/: compile.sh  export_bigvgan.py  export_gpt.py  modeling_gpt2.py
indextts/: OnnxConverter.py  compile.sh  compile_bf16.sh  compile_f16.sh  export_bigvgan.py  export_gpt.py  infer.py  infer_f16.py  modeling_gpt2.py
indextts-tpu/: compile.sh  export_bigvgan.py  export_gpt.py  infer.py
indextts/gpt/: model.py  perceiver.py
indextts/utils/: common.py  feature_extractors.py  front.py
tests/: cases.jsonl  test.py  tt.py
