[project]
name = "indextts-tpu"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "omegaconf>=2.3.0",
    "torchaudio>=2.7.1",
    "untool>=0.2.1",
]

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
default = true
